Fixed some spacing issues on really small mobile screens. For real this time.

--- a/app/public/styles/new-styles.css
+++ b/app/public/styles/new-styles.css
@@ -93,6 +93,6 @@ textarea {
 
 @media screen and (max-width: 600px) {
     #logo {
-      width: 50%;
+      width: 75%;
     }
 }
